style: fix last few items of sidebar getting out of view

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -145,11 +145,12 @@ button.hamburger-button {
     /* bottom: 0px; */
     left: 0px;
     z-index: 1000;
+    height: 84vh;
   }
   
   .app-bar {
     flex-direction: column;
-    height: unset;
+    height: 14vh;
   }
   
   .app-bar-nav-link {
